// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-avatar-overflow-item-beta Render should render with name 1`] = `
<gux-avatar-overflow-item-beta name="John Doe" role="menuitem">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button type="button" aria-label="John Doe" tabindex="-1">
      <span class="gux-avatar gux-accent-3">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            JD
          </span>
        </slot>
      </span>
      <span>
        John Doe
      </span>
    </button>
  </template>
</gux-avatar-overflow-item-beta>
`;

exports[`gux-avatar-overflow-item-beta Render should render with slotted image 1`] = `
<gux-avatar-overflow-item-beta name="John Doe" role="menuitem">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <button type="button" aria-label="John Doe" tabindex="-1">
      <span class="gux-avatar gux-accent-3">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            JD
          </span>
        </slot>
      </span>
      <span>
        John Doe
      </span>
    </button>
  </template>
  <img slot="image" src="test.jpg" alt="John Doe">
</gux-avatar-overflow-item-beta>
`;
